styling index.html

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,8 @@
   </head>
   <body>
 
-    <div id="loading_screen">
-      <div class="loader"></div>
-    </div>
+    <div id="loading_screen"></div>
+
     <div id="server_chooser" style="display:none;">
       <!--User name + server selection-->
       <input type="text" placeholder="Nickname" id="nickname"/>
